[package]
name = "syntax"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A library for enabling syntax highlighting"
license = "MIT OR Apache-2.0"
categories = ["syntax", "no-std"]
repository = "https://github.com/richardanaya/syntax"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anystring = "0.0"